# python-copilot-demo

./: .bandit.yaml  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  LICENSE  Makefile  README.md  get_daily_astronomy.py  get_daily_astronomy.rb  get_weekly_quotes.py  index.html  pyproject.toml  quotes.html  requirements.txt  search.js  unittests.html
.github/workflows/: python.yml
docs/: implementation_plan.md
docs/review/: REVIEW.md  implementation_plan.md  task.md  walkthrough.md
docs/uv/: task.md  walkthrough.md
quotes/: alpha_vantage_service.html  alpha_vantage_service.py  weekly_data_service.html  weekly_data_service.py  weekly_quotes.html  weekly_quotes.py
tests/: test_weekly_quotes.py
