[project]
name = "copilot-demo"
version = "0.1.0"
description = "Read stock quotes using the Alpha Vantage API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib ~= 3.10",
  "pandas ~= 3.0",
  "Pillow ~= 12.1",
  "requests ~= 2.32",
]

[dependency-groups]
dev = [
  "anybadge ~= 1.16",
  "bandit[toml] ~= 1.8",
  "genbadge[all] ~= 1.1",
  "pdoc ~= 16.0",
  "pytest ~= 9.0",
  "pytest-cov ~= 7.0",
  "pytest-html ~= 4.2",
  "ruff ~= 0.11",
]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --cov=quotes --cov-report=html"

[tool.coverage.paths]
source = ["quotes/"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "public/test-coverage"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
